--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+/* Reset */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 /* General Styles */
 body {
   background-color: #f4f4f9;
@@ -6,7 +13,6 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  margin: 0;
 }
 
 /* Main Form Container */
