--- a/src/static/styles.css
+++ b/src/static/styles.css
@@ -32,7 +32,7 @@ input[type="text"] {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 6px;
-  /* margin-bottom: 12px; */
+  margin: 12px 0;
   font-size: 16px;
 }
 
@@ -63,6 +63,7 @@ input[type="text"] {
 .tasks {
   list-style: none;
   padding: 0;
+  margin-top: 12px;
 }
 
 .tasks li {
@@ -111,6 +112,7 @@ button {
   border-radius: 6px;
   cursor: pointer;
   transition: background 0.3s ease-in-out;
+  margin-bottom: 20px;
 }
 
 button:hover {
